--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@babel/core": "^7.12.3",
         "@babel/preset-env": "^7.12.1",
         "babel-loader": "^8.1.0",
+        "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.2.1",
         "css-loader": "^5.0.0",
         "eslint": "^7.12.1",
