--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^5.3.0"
+    },
+    "dependencies": {
+        "serviceworker-webpack-plugin": "^1.0.1"
     }
 }
