--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "webpack-merge": "^5.3.0"
     },
     "dependencies": {
+        "idb": "^5.0.7",
         "serviceworker-webpack-plugin": "^1.0.1"
     }
 }
